@@ -1,5 +1,17 @@
 2004-08-26  Ken Kocienda  <kocienda@apple.com>
 
+        Reviewed by Chris
+        
+        Fix for this bug:
+        
+        <rdar://problem/3777804> Deleting all content in a document can result in giant tall-as-window insertion point
+
+        * khtml/rendering/render_box.cpp:
+        (RenderBox::caretPos): Always use the font height for calculating the caret height in 
+        non-replaced elements (like blocks), rather than the height of the box.
+
+2004-08-26  Ken Kocienda  <kocienda@apple.com>
+
         Reviewed by me
         
         Silly me. Forgot to add this file before.
